# cookiecutter-pdm-pypackage

./: .gitignore  LICENSE  README.md  cookiecutter.json  demo.tape
hooks/: post_gen_project.sh
src/{{cookiecutter.dist_name}}/: .gitignore  pyproject.toml
src/{{cookiecutter.dist_name}}/.github/actions/setup-pdm-env/: action.yml
{{cookiecutter.dist_name}}/: .pre-commit-config.yaml  tox.ini
{{cookiecutter.dist_name}}/.github/workflows/: build.yml  documentation.yml
